kubernetes/wordpress-example/wordpress-fpm/service.yml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-example-svc
  namespace: wordpress-example
spec:
  # type: NodePort
  selector:
    app: wordpress-example
  ports:
  - name: port-1
    port: 80
    protocol: TCP
    # nodePort: 31110
    targetPort: 80 # port on pods
